# Ensemble

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
core/: README.md  package.json  sea-config.json  tsconfig.json
core/scripts/: bundle.mjs  codex-peer-smoke.ts  encrypt-blob.mjs  extract-tokenizer-data.mjs  make-exe.mjs  obfuscate.mjs
core/src/: ask-user-mcp.ts  cli-config.ts  codex-stdio-mcp.ts  conversation-search.ts  db.ts  help-mcp.ts  index.ts  local-tokenizer.ts  mcp-bridge.ts  paths.ts  peer-mcp.ts  platform-key.ts  pricing.json  pricing.ts  skill-mcp.ts  subagent-catalog.ts  subagent-suggest.ts  telemetry.ts  usage-aggregate.ts  usage-extract.ts
desktop-ui/: README.md  next.config.ts  package.json
desktop-ui/app/: globals.css  layout.tsx  page.tsx
desktop-ui/components/: AddTeamMemberDialog.tsx  AgentSettings.tsx  AgentTree.tsx  AskUserDialog.tsx  ChatPane.tsx  CliInstallReminder.tsx  CloudAgentTree.tsx  CloudBootstrap.tsx  CloudLoginDialog.tsx  CloudRemoteBridge.tsx  CloudWorkspacePanel.tsx  (+22 more)
docs/: GETTING_STARTED.md  HANDBOOK.md  INTRODUCTION.md  MAC_DESKTOP_PARITY_GUIDE.md  README.md  architecture.md
ensemble_server/: .env.example  manifest.example.json  package.json
ensemble_web/: package.json
scripts/: desktop-build.mjs  macos-dmg.mjs  prep-sidecar.mjs  regen-icon-from-png.mjs  regen-icon.mjs  tauri-before-build.mjs
shared/: package.json
src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
(+138 files in other folders)
