[package]
name = "ensemble"
version = "0.0.25"
description = "Ensemble — many minds, one workspace"
authors = ["Ensemble"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
# Single-instance gate: a second double-click of the desktop icon should
# resurface the existing window, not spawn a fresh process + second tray icon.
tauri-plugin-single-instance = "2"
tokio = { version = "1", features = ["sync", "io-util", "macros", "time"] }
# UUID — both v4 (random fallback) and bytes-based construction (for the
# SHA256-derived UUIDv5-shaped device id).
uuid = { version = "1", features = ["v4"] }
# Read the OS-level stable machine identifier so the anonymous device id is
# bound to the hardware install, not just to the app's appdata directory.
# Reads: Windows HKLM\SOFTWARE\Microsoft\Cryptography\MachineGuid,
#        macOS  IOPlatformUUID via ioreg,
#        Linux  /etc/machine-id.
machine-uid = "0.5"
# SHA-256 for hashing namespace || machine_uid into a stable device id.
# Pulling sha2 directly is cheaper than adding HMAC since the goal is just
# "deterministic mapping" — no message authentication needed.
sha2 = "0.10"
